# UrbanUniques

./: .gitignore  LICENSE  manage.py  pyproject.toml
UrbanUniques/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: models.py
management/: models.py
products/: models.py
